crates/biome_js_analyze/tests/specs/nursery/noPlaywrightUselessAwait/invalid/expect-sync.js
/* should generate diagnostics */
await expect(1).toBe(1);

